add node.js assignments

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /Week 2/Programs/todo-app/node_modules
-/Week 2/Assignments/easy/promiseClass.js
+/Week 2/Assignments/01-async-js/easy/promiseClass.js
+/Week 2/Assignments/02-nodejs/node_modules
