--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Week 2/Programs/todo-app/node_modules
 /Week 2/Assignments/01-async-js/easy/promiseClass.js
+/Week 2/Assignments/01-async-js/node_modules
 /Week 2/Assignments/02-nodejs/node_modules
