Include Week 3 program

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Week 2/Assignments/01-async-js/easy/promiseClass.js
 /Week 2/Assignments/01-async-js/node_modules
 /Week 2/Assignments/02-nodejs/node_modules
+/Week 3/Programs/node_modules
