Complete live class codes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Week 2/Assignments/02-nodejs/node_modules
 /Week 3/Programs/Week 3.1/node_modules
 /Week 3/Programs/Week 3.2/node_modules
+/Week 3/Programs/Week 3.2/.env
