--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /Week 3/Programs/Week 3.1/node_modules
 /Week 3/Programs/Week 3.2/node_modules
 /Week 3/Programs/Week 3.2/.env
+/Week 3/Assignments/01-middlewares/node_modules
+/Week 3/Assignments/02-jwt/node_modules
+/Week 3/Assignments/02-jwt/node_modules
+/Week 3/Assignments/03-mongo/node_modules
+/Week 3/Assignments/04-mongo-with-jwt-auth/node_modules
