--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /Week 3/Programs/Week 3.2/node_modules
 /Week 3/Programs/Week 3.2/.env
 /Week 3/Assignments/01-middlewares/node_modules
+/Week 3/Assignments/01-middlewares/coverage
 /Week 3/Assignments/02-jwt/node_modules
 /Week 3/Assignments/02-jwt/node_modules
 /Week 3/Assignments/03-mongo/node_modules
