--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@
 /Week 3/Assignments/02-jwt/node_modules
 /Week 3/Assignments/02-jwt/node_modules
 /Week 3/Assignments/03-mongo/node_modules
+/Week 3/Assignments/03-mongo/.env
 /Week 3/Assignments/04-mongo-with-jwt-auth/node_modules
