--- a/Week 3/Assignments/03-mongo/package.json
+++ b/Week 3/Assignments/03-mongo/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "mongoose": "^8.0.3",
     "supertest": "^6.3.3",
