complete 04-mongo-with-jwt-auth

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Week 3/Assignments/03-mongo/node_modules
 /Week 3/Assignments/03-mongo/.env
 /Week 3/Assignments/04-mongo-with-jwt-auth/node_modules
+/Week 3/Assignments/04-mongo-with-jwt-auth/.env
