Add Week 4.2 files

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Week 3/Assignments/03-mongo/.env
 /Week 3/Assignments/04-mongo-with-jwt-auth/node_modules
 /Week 3/Assignments/04-mongo-with-jwt-auth/.env
+/Week 4/Programs/Week 4.2/Creating-TODO-using-react/node_modules
+/Week 4/Programs/Week 4.2/3. Creating the Reconciler.html
