Add Week 5.1 Programs

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Week 4/Assignments/react-basics/todo-app/node_modules
 /Week 4/Programs/Week 4.2/3. Creating the Reconciler.html
 /Week 4/Programs/Week 4.2/DummyTODOAPI/node_modules
+/Week 4/Programs/Week 5.1/counter-app/node_modules
