--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@
 /Week 4/Assignments/react-basics/todo-app/node_modules
 /Week 4/Programs/Week 4.2/3. Creating the Reconciler.html
 /Week 4/Programs/Week 4.2/DummyTODOAPI/node_modules
-/Week 4/Programs/Week 5.1/counter-app/node_modules
+/Week 5/Programs/Week 5.1/counter-app/node_modules
+/Week 5/Programs/Week 5.2/TODO-MERN-APP/frontend/node_modules
+/Week 5/Programs/Week 5.2/TODO-MERN-APP/backend/.env
+/Week 5/Programs/Week 5.2/TODO-MERN-APP/backend/node_modules
