--- a/Week 5/Programs/Week 5.2/TODO-MERN-APP/backend/package.json
+++ b/Week 5/Programs/Week 5.2/TODO-MERN-APP/backend/package.json
@@ -7,6 +7,7 @@
     "@types/node": "^20.10.6",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
