--- a/Week 9/Programs/Week 9.1/package.json
+++ b/Week 9/Programs/Week 9.1/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
