--- a/Week 10/Programs/Week 10.1/.env.example
+++ b/Week 10/Programs/Week 10.1/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:100xtest@localhost:5432/postgres?sslmode=disablee" #or paste your neon db url
+DATABASE_URL="postgresql://postgres:100xtest@localhost:5432/postgres?sslmode=disable" #or paste your neon db url
